b2c/sfsc/src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Order_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds order relationship with contact.</description>
        <inlineHelpText>This field holds order relationship with contact.</inlineHelpText>
        <label>Order Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>SCCOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_SCCSync_Status__c</fullName>
        <description>This field holds Order Synchronised status with Salesforce Commerce Cloud.</description>
        <inlineHelpText>This field holds Order Synchronised status with Salesforce Commerce Cloud.</inlineHelpText>
        <label>Order SCC Sync Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Synchronised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFCC_Order_Number__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Order Number.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds Salesforce Commerce Cloud Order Number.</inlineHelpText>
        <label>Customer Order Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SFCC_Order_Total__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Order total value.</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud Order total value.</inlineHelpText>
        <label>Order Total</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFCC_Payment_Status__c</fullName>
        <description>Whether the payment has been made by the customer</description>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>not_paid</fullName>
                </value>
                <value>
                    <fullName>paid</fullName>
                </value>
                <value>
                    <fullName>part_paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <description>Status of the progress of the order</description>
        <label>Shipment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>not_shipped</fullName>
                </value>
                <value>
                    <fullName>shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>from_SFCC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field holds if this record created from Commerce Cloud</description>
        <inlineHelpText>This field holds if this record created from Commerce Cloud</inlineHelpText>
        <label>from SFCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isContactIdExist__c</fullName>
        <description>This field holds if the contact id exists within salesforce</description>
        <defaultValue>false</defaultValue>
        <label>isContactIdExist</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>